# rust-mmdeploy

./: .gitignore  Cargo.toml  README.md  ci_test.sh
examples/: classifier.rs  detector.rs  ocr.rs  pose_detector.rs  restorer.rs  rotated_detector.rs  segmentor.rs
src/: classifier.rs  detector.rs  lib.rs  pose_detector.rs  restorer.rs  rotated_detector.rs  segmentor.rs  text_detector.rs  text_recognizer.rs
