[package]
name = "mmdeploy"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Safe MMDeploy Rust wrapper"
repository = "https://github.com/liu-mengyang/rust-mmdeploy"
keywords = ["mmdeploy", "deployment"]
authors = ["Liu Mengyang","VanderBieu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmdeploy-sys = "1.0.0"
opencv = "0.68"
rand = "0.8.5"